--- a/contact/contactme.html
+++ b/contact/contactme.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>
-		My Contact Details
+		Contact me
 	</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
   	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
@@ -47,7 +47,7 @@
 	<h1>My Contact Details</h1>
 	<p>Name: <em>Ishant Garg</em></p>
 	<p>Email: <em>ishantkumar1412@gmail.com</em></p>
-	<form action="mailto:info@ishantkumar1412@gmail.com" method="post" enctype="text/plain">
+	<form action="mailto:ishantkumar1412@gmail.com" method="post" enctype="text/plain">
 			<table>
 				<tr>
 					<td><label>Name:</label></td>
